# django-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml  setup.cfg
backend/apps/core/: exceptions.py  views.py
backend/apps/core/management/commands/: wait_for_db.py
backend/apps/users/: admin.py  api_metadata.py  decorators.py  managers.py  models.py  urls.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_phone_number.py  0003_user_photo.py
backend/apps/users/views/v1/: social_auth_view.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py  prod.py
backend/requirements/: base.txt  local.txt  prod.txt
docker/dev/backend/: Dockerfile
docker/dev/env/: .backend.env  .postgres.env
docker/prod/backend/: Dockerfile
docker/prod/redis/: redis.conf
docs/: dbdiagram.txt  linters.md  pre-commit.md  status-codes.md
