[metadata]
name = new-techs
description = Learning new technologies, pet project
author = Maxim Gudkov
url = https://github.com/MaximGudkov/new-techs

[options]
packages = find:
include_package_data = True
python_requires = >=3.12
zip_safe = False
install_requires = file: requirements/base.txt

[options.extras_require]
local = file: requirements/local.txt
prod = file: requirements/prod.txt
